added doc-kit common files + updated xml-auto-format config

--- a/doc-kit.conf
+++ b/doc-kit.conf
@@ -1,10 +1,11 @@
 type: docbook5-book
 variant: license-cc
 
-file: 0076016fd595b2cffba058d1f9a19a046957e3a8  .gitignore
-file: 78e9ecb5e545e3d2bd0f81ab1d4632ee292099a5  xml/generic-entities.ent
+file: dc865ed00674536288a1e5a78ba07fe138aaabde  .gitignore
+file: c6b4745307e90c9b88905b434cbbaddc54e4541b  .editorconfig
+file: b8acf6b6bcaa4bd6b4d830da097d824e9fa4e40d  xml/generic-entities.ent
 file: e18430714fe3af85fe62bea62b50140d8b5edf5a  xml/network-entities.ent
-file: 20ab0e3b6b220fcf8c589beb16d949d77789944d  xml/common_intro_support.xml
+file: b7265561df4f1f6f7e108390863b3f25f0ae0f7c  xml/common_intro_support.xml
 file: 678db25fa5a1f62232af7eb8db24fe409b4a11d5  xml/common_intro_convention.xml
 file: 4a7ac53b31ea438e91103a0f2aacb37f8a197b20  xml/common_intro_feedback.xml
 file: daf531111e37c41662988c631f87a734c3f55201  xml/common_copyright_cc.xml
