--- a/.github/workflows/reformat-xml.yml
+++ b/.github/workflows/reformat-xml.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           config: https://raw.githubusercontent.com/SUSE/doc-ses/331efaec270a54f4353865128ca0702b5e45791e/docbook-xmlformat.conf
+          exclude-files: |
+            xml/common_copyright_cc.xml
+	          xml/common_intro_convention.xml
+            xml/common_intro_feedback.xml
+            xml/common_intro_support.xml
 
       - name: Push
         if: ${{ steps.dbxml.outputs.xmlfound }}
